<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2009, Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
<string name="app_name">Secrets</string>

<string name="search_hint">Search secrets</string>

<string name="login_first_line">Welcome to your Secrets</string>
<string name="login_enter_password">Enter password</string>
<string name="login_validate_password">Validate password</string>

<string name="cipher_strength_label">Bcrypt rounds ({0,number})</string>
<string name="password_changed">Password changed successfully.</string>

<!-- Whenever the version changes here, it must also be changed in
     the androidmanifest.xml file -->
<string name="copyright">Version 2.4.4 &#169; 2012 Google Inc.</string>

<string name="invalid_password">Oops! The password is invalid, please try again.</string>
<string name="no_password">&lt; No PIN &gt;</string>
<string name="error_reset_password">Uh oh.  Unable to reset your password.</string>
<string name="error_save_secrets">Uh oh.  Unable to save your secrets.</string>

<string name="backup_succeeded">Backup succeeded.</string>
<string name="restore_succeeded">Restore succeeded.</string>
<string name="sync_succeeded">Sync with {0} succeeded.</string>
<string name="restore_failed">Uh oh.  Unable to restore your secrets.  Make sure your password is the same as the one used to create the backup.</string>
<string name="enable_online_backup">Enable online backup to safe guard your secrets.</string>
<string name="sync_failed">Uh oh. Sync with {0} failed.  Check with the Sync agent app for more details.</string>
<string name="dialog_learn_how">Learn how</string>
<string name="dialog_not_now">Not now</string>

<string name="export_succeeded">File exported to the SD card successfully.\n\nCAREFUL: The exported file is not password protected!</string>
<string name="export_failed">Uh oh.  Unable to export your secrets.</string>

<string name="import_not_found">No CSV file found on the SD card.\n\nSecrets can be imported from the following files:\n\n{0}</string>
<string name="import_partial">Hmmm, only some secrets were imported successfully.  Check your secrets and the \'\'{0}\'\' file for correctness.</string>
<string name="import_failed">Uh oh.  Unable to import your secrets from \'\'{0}\'\'.</string>

<string name="login_instruction_1">
Create a password to protect your secrets.  Use letters, numbers, and
punctuation to make the password difficult to guess.\nAfter typing the password,
press \u21b5 or Done.
</string>
<string name="login_instruction_2">
Validate your new password by typing it again.  If there is a
problem, you\'ll start over. 
</string>
<string name="edit_instructions">
All information is optional, enter as much or as little as needed.

When done, press the Back button, or MENU for more options.
</string>

<string name="friendly_id_format">
{0}, {1,date,short} {1,time,short}
</string>
<string name="friendly_id_format_2">
{1,date,short} {1,time,short}
</string>

<string name="last_saved_time_format">[{0,date,MMM-dd}]</string>
<string name="list_title">{0,number} Secrets {1}</string>
<string name="list_title_filtered">{0,number} of {1,number} Secrets {2}</string>

<string name="list_name">Secrets</string>
<string name="list_no_data">Press \"Add\" to begin.</string>
<string name="list_descption_label">Web site/Description</string>
<string name="list_username_label">Username/Id</string>
<string name="list_password_label">Password/PIN</string>
<string name="list_email_label">Email</string>
<string name="list_notes_label">Notes</string>
<string name="list_add_secret">Add secret</string>
<string name="list_instructions">Tap secret to reveal its PIN.  Tap and hold
to change it.</string>

<string name="login_menu_reset_password">Reset password</string>
<string name="login_menu_reset_password_message">
Resetting your password will delete all of your secrets!
Are you really sure?
</string>
<string name="login_reset_password_pos">Yes</string>
<string name="login_reset_password_neg">No</string>

<string name="edit_menu_delete_secret_message">
Are you sure you want to delete \'\'{0}\'\'?
</string>

<string name="dialog_restore_title">Restore from:</string>

<string name="edit_menu_import_secrets_message">Import successful.  Delete \'\'{0}\'\' now?</string>

<string name="username_copied_to_clipboard">Id</string>
<string name="password_copied_to_clipboard">PIN</string>
<string name="copied_to_clipboard">{0}\'\'s {1} has been copied to the clipboard.</string>

<string name="list_menu_add">Add</string>
<string name="list_menu_edit">Edit</string>
<string name="list_menu_search">Search</string>
<string name="list_menu_save">Save</string>
<string name="list_menu_discard">Discard</string>
<string name="list_menu_delete">Delete</string>
<string name="list_menu_access">History</string>
<string name="list_menu_backup">Backup</string>
<string name="list_menu_restore">Restore</string>
<string name="list_menu_import">Import</string>
<string name="list_menu_export">Export</string>
<string name="list_menu_sync">Sync</string>
<string name="list_menu_copy_username_to_clipoboard">Copy Id</string>
<string name="list_menu_copy_password_to_clipoboard">Copy PIN</string>
<string name="list_menu_generate_password">Generate</string>
<string name="list_menu_change_password">Change password</string>

<string name="log_name">Access log</string>
<string name="log_name_format">Access log for {0}</string>

<!-- String assocated with online agent support -->
<string name="permission_osa_label">access unencrypted secrets</string>
<string name="permission_osa_desc">Allows an application to read and write all your secrets.
    A malicious application could send your secrets to anyone or post them online for everyone to see.</string>
<string name="osa_sent">Secrets sent to {0} application</string>
<string name="dialog_sync_title">Sync with:</string>
<string name="no_osa_available">Sorry, there are no sync agents available.</string>
<string name="error_osa_secrets">Unable to sync your secrets.</string>
<string name="sync_active">A sync operation is already active. Do you want to
    cancel it so that you can re-issue the sync request?</string>
<string name="yes_option">Yes</string>
<string name="no_option">No</string>
<string name="sync_normalization">Problems detected\n\n
   Sync requires that all secrets must have descriptions that are unique and without leading or trailing spaces.
   Secrets can fix this for you - duplicates will have a sequence number added to them. \nChoose \"Yes\"
   if you want secrets to do this now, or \"No\" to go back and fix it manually.
</string>
<string name="num_normalized">{0} secret(s) were updated</string>
<!-- the following string are used to format a string that indicate when a
     given secret was created or last viewed, modified, or exported.  The
     {0} will be replaced with a "verb" which describes the action, and {1}
     will be replaced with a time value.  Note that for log_min, the time
     value is simply an integer, whereas for the rest its a Date object. -->
<string name="log_sec">{0} moments ago</string>
<string name="log_min">{0} {1} minutes ago</string>
<string name="log_today">{0} today at {1,time,short}</string>
<string name="log_yesterday">{0} yesterday at {1,time,short}</string>
<string name="log_date">{0} {1,date,medium}</string>

<!-- These strings represent the "verbs" that will be used in the log strings
     above. -->
<string name="log_created">Created</string>
<string name="log_changed">Modified</string>
<string name="log_viewed">Viewed</string>
<string name="log_exported">Exported</string>
<string name="log_synced">Synced</string>

<string name="error_missing_ciphers">Uh oh: can\'t save, password is invalid.</string>
<string name="error_cannot_move_existing">Uh oh: can\'t move existing file out of the way.</string>
<string name="error_cannot_move_new">Uh oh: can\'t rename new file.</string>
<string name="password_strength_caption">Password Strength: {0}</string>
<string name="password_strength_weak">Weak :(</string>
<string name="password_strength_medium">Medium :|</string>
<string name="password_strength_strong">Strong :)</string>
<string name="password_strength_very_strong">Very Strong :D</string>
<string name="password_strength_crazy_strong">Crazy Strong! B)</string>

</resources>
